# RStat-cpp

./: CMakeLists.txt  README.md
include/: raylib_win32.h
src/: ArgCheck.cpp  ArgCheck.hpp  GetStats.cpp  GetStats.hpp  NoGui.cpp  NoGui.hpp  Types.hpp  main.cpp
src/Graphics/: Core.cpp  Graphics.hpp  Loop.cpp  NormalBgRect.hpp  NormalRes.hpp  NormalText.hpp  Raylib.cpp  Raylib.hpp
src/RobloxData/: GetRobloxData.hpp  GetStats.cpp  GetStats.hpp  MakeRequest.cpp
src/TerminalGraphics/: NoGui.cpp  NoGui.hpp
